--- a/src/components/Navbar/_navbar.scss
+++ b/src/components/Navbar/_navbar.scss
@@ -25,7 +25,19 @@
                 .nav-link {
                     padding: 0;
                 }
+            }
+        }
+    }
+}
 
+.navbar_educativo {
+    background: linear-gradient(#ffffffce, #ffffffce), url('/public/img/educativo/node_background.png');
+     background-repeat: no-repeat;
+     background-position: right;
+     background-size: 760px;
+    .collapse {
+        .navbar-nav {
+            .nav-item {
                 .active {
                     background: linear-gradient(90deg, rgba(218,113,0,1) 0%, rgba(255,149,0,1) 19%, rgba(255,165,39,1) 47%);
                      background-clip: text;
