--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,3 +8,4 @@
 @import '../components/Navbar/navbar';
 @import '../components/Educativo/educativo';
 @import '../components/Contact_card/contact_card';
+@import '../components/Industrial/industrial';
