--- a/src/components/Navbar/_navbar.scss
+++ b/src/components/Navbar/_navbar.scss
@@ -31,7 +31,7 @@
 }
 
 .navbar_educativo {
-    background: linear-gradient(#ffffffce, #ffffffce), url('/public/img/educativo/node_background.png');
+    background: linear-gradient(#ffffffce, #ffffffce), url('/public/img/navbar/node_background.png');
      background-repeat: no-repeat;
      background-position: right;
      background-size: 760px;
@@ -43,6 +43,28 @@
                      background-clip: text;
                     border-bottom: 4px solid transparent;
                      border-image: linear-gradient(90deg, rgba(218,113,0,1) 0%, rgba(255,149,0,1) 19%, rgba(255,165,39,1) 47%) 1;
+                    color: transparent;
+                    position: relative;
+                    font-weight: bold;
+                }
+            }
+        }
+    }
+}
+
+.navbar_industrial {
+    background: linear-gradient(#ffffffce, #ffffffce), url('/public/img/navbar/hex_background.png');
+     background-repeat: no-repeat;
+     background-position: right;
+     background-size: 600px;
+    .collapse {
+        .navbar-nav {
+            .nav-item {
+                .active {
+                    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 20%, rgba(19,107,188,1) 49%, rgba(22,144,209,1) 59%, rgba(0,32,36,1) 100%);
+                     background-clip: text;
+                    border-bottom: 4px solid transparent;
+                     border-image: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 20%, rgba(19,107,188,1) 49%, rgba(22,144,209,1) 59%, rgba(0,32,36,1) 100%) 1;
                     color: transparent;
                     position: relative;
                     font-weight: bold;
