--- a/src/components/Industrial/_industrial.scss
+++ b/src/components/Industrial/_industrial.scss
@@ -1,38 +1,137 @@
 #industrial {
     width: 99vw;
 
-    .industrial_carousel {
-        width: 99vw;
-        height: 45rem;
-        border-end-end-radius: 100px;
+    .intro {
+        background: linear-gradient(to bottom, #fffffff3, #fffffff3), url('/img/industrial/industrial_background_1.jpg');
+         background-size: cover;
+         background-repeat: no-repeat;
 
-        .carousel-item {
+        .industrial_carousel {
+            width: 99vw;
             height: 45rem;
             border-end-end-radius: 100px;
+    
+            .carousel-item {
+                height: 45rem;
+                border-end-end-radius: 100px;
+    
+                .slide_content {
+                    width: 45vw;
+                    margin-top: 5rem;
+                    margin-left: 5rem;
+                }
+            }
+    
+            .slide_1 {
+                background: url('/img/industrial/unit_tree_robot.webp');
+                 background-position: right;
+                 background-size: contain;
+                 background-repeat: no-repeat;
+                 background-color: white;
+                 border-end-end-radius: 100px;
+            }
+    
+            .slide_3 {
+                background: url('/img/industrial/dog_robot.jpg');
+                 background-color: black;
+                 background-size: cover;
+                 background-repeat: no-repeat;
+                 background-position: top;
+                 border-end-end-radius: 100px;
+            }
+        }   
+    }
 
-            .slide_content {
-                width: 45vw;
-                margin-top: 5rem;
-                margin-left: 5rem;
+    .industrial_bussiness_units {
+        .units_description {
+
+            h2 {
+                margin-top: 4rem;
+            }
+
+            p {
+                width: 40%;
+                margin: 20px;
+                padding-block: 2rem;
             }
         }
+    }
 
-        .slide_1 {
-            background: url('/public/img/industrial/unit_tree_robot.webp');
-             background-position: right;
-             background-size: contain;
-             background-repeat: no-repeat;
-             background-color: white;
-             border-end-end-radius: 100px;
-        }
+    .sustainable_development {
+        padding-block: 8rem;
 
-        .slide_3 {
-            background: url('/public/img/industrial/dog_robot.jpg');
-             background-color: black;
-             background-size: cover;
-             background-repeat: no-repeat;
-             background-position: top;
-             border-end-end-radius: 100px;
+        .earth_hands {
+            width: 40rem;
         }
+        
+        .goals {
+            width: 100%;
+
+            .title {   
+                .title_icon {
+                    width: 45px;
+                    height: 45px;
+                    margin-right: 15px;
+                }
+            }
+
+            .row {
+                p {
+                    width: 40rem;
+                }
+    
+                .check {
+                    text-align: left;
+    
+                    img {
+                        width: 50px;
+                        height: 25px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+// slide style
+.bussiness_slide {
+    h3 {
+        color: #0098DA;
+    }
+}
+
+.slide_arrow {
+    img {
+        width: 30px;
+    }       
+}
+
+.slide_icon {
+    width: 65px;
+    height: 60px;
+    margin-bottom: 20px;
+}
+
+.next_arrow {
+    background: none;
+}
+
+.prev_arrow {
+    background: none;
+}
+
+.slick-prev {
+    left: -55px;
+    content: '';
+    &::before {
+        content: '';
+    }
+}
+
+.slick-next {
+    right: -45px;
+    content: '';
+    &::before {
+        content: '';
     }
 }
