--- a/src/components/Navbar/_navbar.scss
+++ b/src/components/Navbar/_navbar.scss
@@ -53,6 +53,8 @@
 }
 
 .navbar_industrial {
+    border-bottom: 2px solid;
+     border-image: linear-gradient(90deg, rgba(255,255,255,1) 53%, rgba(220,248,255,1) 63%, rgba(0,202,255,1) 75%, rgba(0,79,157,1) 92%) 1;
     background: linear-gradient(#ffffffce, #ffffffce), url('/public/img/navbar/hex_background.png');
      background-repeat: no-repeat;
      background-position: right;
