--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,3 +9,4 @@
 @import '../components/Educativo/educativo';
 @import '../components/Contact_card/contact_card';
 @import '../components/Industrial/industrial';
+@import '../components/FloatingWhatsApp/floatingWhatsApp';
