--- a/src/components/FloatingWhatsApp/_floatingWhatsApp.scss
+++ b/src/components/FloatingWhatsApp/_floatingWhatsApp.scss
@@ -1,25 +1,65 @@
 .floating-whatsapp {
     position: fixed;
-    bottom: 10px;
-    right: 30px;
-    width: 100px;
-    height: 100px;
+    bottom: 20px;
+    right: 20px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
- 
+    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+
     img {
-        width: 100%;
-        height: 100%;
-        &:hover {
-            filter: drop-shadow(-1px -2px 21px rgba(6,172,102,0.65));
-        }
+        width: 60%;
+        height: 60%;
+        transition: transform 0.2s ease-in-out;
     }
 
     &:hover {
         transform: scale(1.1);
-        transition: transform 0.2s;
+    }
+}
+
+.dropdown {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 100px;
+    right: 10;
+    background-color: transparent;
+    padding: 0;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+
+    &.show {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    .dropdown-item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 15px 0;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%; 
+        transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+
+        img {
+            width: 60px;  /* Ajustamos el tamaño de los íconos */
+            height: 60px;
+        }
+
+        &:hover {
+            transform: scale(1.1); /* Efecto de aumento del tamaño */
+        }
+
+        &:active {
+            transform: scale(1); /* Evita el efecto de escalado al hacer clic */
+        }
     }
 }
