--- a/src/components/FloatingWhatsApp/_floatingWhatsApp.scss
+++ b/src/components/FloatingWhatsApp/_floatingWhatsApp.scss
@@ -50,16 +50,16 @@
         transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 
         img {
-            width: 60px;  /* Ajustamos el tamaño de los íconos */
+            width: 60px;
             height: 60px;
         }
 
         &:hover {
-            transform: scale(1.1); /* Efecto de aumento del tamaño */
+            transform: scale(1.1);
         }
 
         &:active {
-            transform: scale(1); /* Evita el efecto de escalado al hacer clic */
+            transform: scale(1);
         }
     }
 }
