--- a/src/components/FloatingWhatsApp/_floatingWhatsApp.scss
+++ b/src/components/FloatingWhatsApp/_floatingWhatsApp.scss
@@ -20,6 +20,13 @@
     &:hover {
         transform: scale(1.1);
     }
+
+
+    &:hover .dropdown {
+        visibility: visible;
+        opacity: 1;
+        transform: translateY(0) translateX(50%);
+    }
 }
 
 .dropdown {
@@ -27,17 +34,11 @@
     flex-direction: column;
     position: absolute;
     bottom: 100px;
-    right: 10;
-    background-color: transparent;
-    padding: 0;
+    right: 50%;
+    transform: translateX(50%) translateY(20px);
+    visibility: hidden;
     opacity: 0;
-    transform: translateY(20px);
     transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-
-    &.show {
-        opacity: 1;
-        transform: translateY(0);
-    }
 
     .dropdown-item {
         display: flex;
@@ -46,7 +47,7 @@
         margin: 15px 0;
         width: 50px;
         height: 50px;
-        border-radius: 50%; 
+        border-radius: 50%;
         transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 
         img {
@@ -57,9 +58,7 @@
         &:hover {
             transform: scale(1.1);
         }
-
-        &:active {
-            transform: scale(1);
-        }
     }
 }
+
+
