--- a/src/components/FloatingWhatsApp/_floatingWhatsApp.scss
+++ b/src/components/FloatingWhatsApp/_floatingWhatsApp.scss
@@ -2,8 +2,8 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    width: 60px;
-    height: 60px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -12,9 +12,12 @@
     transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 
     img {
-        width: 60%;
-        height: 60%;
+        width: 100%;
+        height: 100%;
         transition: transform 0.2s ease-in-out;
+        &:hover {
+            filter: drop-shadow(-1px -2px 21px rgba(6,172,102,0.65));
+        }
     }
 
     &:hover {
@@ -44,7 +47,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: 15px 0;
+        margin: 18px 0;
         width: 50px;
         height: 50px;
         border-radius: 50%;
@@ -60,5 +63,3 @@
         }
     }
 }
-
-
