--- a/src/css/main.css
+++ b/src/css/main.css
@@ -601,20 +601,48 @@
 
 .floating-whatsapp {
   position: fixed;
-  bottom: 10px;
-  right: 30px;
-  width: 100px;
-  height: 100px;
+  bottom: 20px;
+  right: 20px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  cursor: pointer; }
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out; }
   .floating-whatsapp img {
-    width: 100%;
-    height: 100%; }
-    .floating-whatsapp img:hover {
-      filter: drop-shadow(-1px -2px 21px rgba(6, 172, 102, 0.65)); }
+    width: 60%;
+    height: 60%;
+    transition: transform 0.2s ease-in-out; }
   .floating-whatsapp:hover {
-    transform: scale(1.1);
-    transition: transform 0.2s; }
+    transform: scale(1.1); }
+  .floating-whatsapp:hover .dropdown {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0) translateX(50%); }
+
+.dropdown {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 100px;
+  right: 50%;
+  transform: translateX(50%) translateY(20px);
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out; }
+  .dropdown .dropdown-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; }
+    .dropdown .dropdown-item img {
+      width: 60px;
+      height: 60px; }
+    .dropdown .dropdown-item:hover {
+      transform: scale(1.1); }
