--- a/src/components/FloatingWhatsApp/_floatingWhatsApp.scss
+++ b/src/components/FloatingWhatsApp/_floatingWhatsApp.scss
@@ -1,9 +1,10 @@
 .floating-whatsapp {
+    background-color: rgb(0, 145, 255);
     position: fixed;
     bottom: 20px;
     right: 20px;
-    width: 60px;
-    height: 60px;
+    width: 65px;
+    height: 65px;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -11,14 +12,20 @@
     cursor: pointer;
     transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 
-    img {
-        width: 60%;
-        height: 60%;
-        transition: transform 0.2s ease-in-out;
+    .plus_icon {
+        display: flex;
+         justify-content: center;
+        img {
+            width: 60%;
+            margin: 0;
+            padding: 0;
+            transition: transform 0.2s ease-in-out;
+        }
     }
 
     &:hover {
         transform: scale(1.1);
+        box-shadow: 1px 0px 85px 1px rgba(0, 145, 255, 0.938);;
     }
 }
 
