--- a/src/components/FloatingWhatsApp/_floatingWhatsApp.scss
+++ b/src/components/FloatingWhatsApp/_floatingWhatsApp.scss
@@ -1,5 +1,6 @@
-.floating-whatsapp {
-    background-color: rgb(0, 145, 255);
+.floating-whatsapp, 
+.toggle-floating {
+    background-color: #255cd3;
     position: fixed;
     bottom: 20px;
     right: 20px;
@@ -22,17 +23,22 @@
             transition: transform 0.2s ease-in-out;
         }
     }
+}
 
-    &:hover {
-        transform: scale(1.1);
-        box-shadow: 1px 0px 85px 1px rgba(0, 145, 255, 0.938);;
-    }
+.floating-whatsapp:hover {
+    transform: scale(1.1);
+    box-shadow: 1px 0px 85px 1px rgba(0, 145, 255, 0.938);
+}
 
-
-    &:hover .dropdown {
+.toggle-floating {
+    .dropdown {
         visibility: visible;
         opacity: 1;
         transform: translateY(0) translateX(50%);
+    }
+
+    &:hover {
+        box-shadow: none;
     }
 }
 
@@ -47,19 +53,34 @@
     opacity: 0;
     transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 
+    .whatsapp {
+        background-color: #25D366;
+
+        &:hover {
+            box-shadow: 1px 0px 50px 1px #008b0c81;
+        }
+    }
+
+    .mail {
+        background-color: #0091ff;
+
+        &:hover {
+            box-shadow: 1px 0px 50px 1px #0091ff81;
+        }
+    }
+
     .dropdown-item {
         display: flex;
         justify-content: center;
         align-items: center;
         margin: 18px 0;
-        width: 50px;
-        height: 50px;
+        width: 60px;
+        height: 60px;
         border-radius: 50%;
         transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 
         img {
-            width: 60px;
-            height: 60px;
+            width: 35px;
         }
 
         &:hover {
